[project]
name = "longcat-audiodit"
version = "0.1.0"
description = "LongCat-AudioDiT: diffusion TTS in waveform latent space."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "transformers>=5.3.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "safetensors>=0.4.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "einops>=0.8.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["audiodit*"]
